Fix second-page overflow bug.
Fix:
	static/css/_base.sass
		-remove the "overflow: hidden" value from body, which prevented the user
		from scrolling to the bottom of the page.

--- a/static/css/_base.sass
+++ b/static/css/_base.sass
@@ -8,12 +8,11 @@ html
 
 body
 	font-family: "Open Sans", sans-serif
-	overflow: hidden
 
 	#gSignInContainer, #gUserPanel
 		@extend .t3
 
-		position: absolute
+		position: fixed
 		right: 0px
 		top: 0px
 
